# pl3xus

./: .gitignore  CHANGELOG.md  Cargo.toml  fanuc_replica.db  remove_network_message_impls.ps1
crates/pl3xus/: Cargo.toml
crates/pl3xus/examples/: README.md  automatic_messages.rs  client.rs  server.rs  shared.rs
crates/pl3xus/examples/examples_shared/: mod.rs
crates/pl3xus/examples_common/: Cargo.toml
crates/pl3xus/examples_common/src/: lib.rs
crates/pl3xus/src/: lib.rs  managers.rs  runtime.rs  tcp.rs
crates/pl3xus/src/managers/: network.rs  network_request.rs  registration.rs
crates/pl3xus/src/runtime/: bevy_runtime.rs
crates/pl3xus/tests/: unified_api_tests.rs
crates/pl3xus_client/: Cargo.toml  README.md
crates/pl3xus_client/src/: client_type_registry.rs  components.rs  context.rs  error.rs  hooks.rs  lib.rs  native_client.rs  provider.rs  traits.rs
crates/pl3xus_client/src/devtools/: mod.rs  sync.rs  ui.rs
crates/pl3xus_common/: Cargo.toml
crates/pl3xus_common/src/: lib.rs  messages.rs
crates/pl3xus_common/src/codec/: binary.rs  mod.rs
crates/pl3xus_memory/: Cargo.toml  README.md
crates/pl3xus_memory/src/: connection_cleanup.rs  fixed_networking_plugin.rs  lib.rs  memory_diagnostic.rs  memory_monitor.rs  message_cleanup.rs  plugin.rs  test_memory_leak.rs
crates/pl3xus_sync/: Cargo.toml  README.md
crates/pl3xus_sync/src/: authorization.rs  control.rs  invalidation.rs  lib.rs  messages.rs  registry.rs  subscription.rs  systems.rs
crates/pl3xus_websockets/: .gitignore  Cargo.toml  README.md
crates/pl3xus_websockets/examples/: HYBRID_SERVER.md  client.rs  hybrid_server.rs  immediate_messages.rs  scheduled_messages.rs  server.rs  shared.rs  shared_types.rs
crates/pl3xus_websockets/leptos_client_example/: Cargo.toml  REACTIVITY_FIX.md  README.md  Trunk.toml  index.html  style.css
crates/pl3xus_websockets/leptos_client_example/src/: main.rs
crates/pl3xus_websockets/src/: lib.rs
crates/pl3xus_websockets/wasm_client_example/: Cargo.toml
crates/pl3xus_websockets/wasm_client_example/src/: main.rs  shared.rs
docs-site/: package-lock.json  (+1 more)
examples/basic/client/: Cargo.toml  index.html
examples/basic/client/src/: main.rs
examples/basic/server/: Cargo.toml
examples/basic/server/src/: main.rs
examples/control-demo/server/: Cargo.toml
examples/control-demo/server/src/: main.rs
examples/devtools-demo/server/: Cargo.toml
examples/devtools-demo/server/src/: main.rs
examples/fanuc/client/: Cargo.toml  README.md
examples/fanuc/client/src/: main.rs
examples/fanuc/server/: Cargo.toml
examples/fanuc/server/src/: main.rs
examples/fanuc_rmi_replica/client/: Cargo.toml  Trunk.toml  fanuc_replica.db  index.html  tailwind.config.js
examples/fanuc_rmi_replica/client/assets/: globals.css
examples/fanuc_rmi_replica/client/src/: app.rs  main.rs  theme.rs
examples/fanuc_rmi_replica/client/src/components/: error_log.rs  io_status.rs  jog_controls.rs  mod.rs  position_display.rs  robot_wizard.rs  status_panel.rs  theme_modal.rs  toast.rs
examples/fanuc_rmi_replica/client/src/layout/: floating.rs  left_navbar.rs  mod.rs  right_panel.rs  top_bar.rs
examples/fanuc_rmi_replica/client/src/pages/: mod.rs  settings.rs
examples/fanuc_rmi_replica/server/: Cargo.toml  fanuc_replica.db
examples/fanuc_rmi_replica/server/src/: database.rs  driver_sync.rs  jogging.rs  main.rs
examples/fanuc_rmi_replica/server/src/plugins/: connection.rs  execution.rs  mod.rs  polling.rs  program.rs  requests.rs  sync.rs  system.rs
examples/fanuc_rmi_replica_plugins/: Cargo.toml  README.md  fanuc_replica.db  test_program.csv
examples/fanuc_rmi_replica_plugins/app/: Cargo.toml  index.html
examples/fanuc_rmi_replica_plugins/app/assets/: globals.css
examples/fanuc_rmi_replica_plugins/app/src/: app.rs  main.rs  theme.rs
examples/fanuc_rmi_replica_plugins/app/src/components/: error_log.rs  io_status.rs  jog_controls.rs  mod.rs  position_display.rs  robot_wizard.rs  status_panel.rs  toast.rs
examples/fanuc_rmi_replica_plugins/duet_simulator/: Cargo.toml
examples/fanuc_rmi_replica_plugins/duet_simulator/src/: main.rs
examples/fanuc_rmi_replica_plugins/plugins/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/core/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/duet/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/execution/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/fanuc/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/programs/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/robotics/: Cargo.toml
examples/fanuc_rmi_replica_plugins/plugins/src/: lib.rs
examples/fanuc_rmi_replica_plugins/research/: PROGRAM_MIGRATION_PLAN.md  README.md  plugin-architecture-v2.md
examples/fanuc_rmi_replica_plugins/research/async-runtime/: README.md
examples/fanuc_rmi_replica_plugins/research/coordinate-abstraction/: architecture.md  buffer_architecture.md  decision_matrix.md  execution_architecture.md  implementation_plan.md  industry_comparison.md  quaternion_to_euler.md
examples/fanuc_rmi_replica_plugins/research/execution-plugin/: README.md  diagrams.md  duet_extruder_implementation.md
examples/fanuc_rmi_replica_plugins/research/fanuc-integration-migration/: README.md  implementation_gaps.md
examples/fanuc_rmi_replica_plugins/research/multi-crate-plugins/: HANDOFF.md  IMPLEMENTATION_SPEC.md  README.md
examples/fanuc_rmi_replica_plugins/research/streaming-execution/: README.md  current_state.md  diagrams.md  implementation_spec.md
examples/fanuc_rmi_replica_plugins/research/subsystem-architecture/: README.md  handler-ownership.md  implementation-complete.md  implementation-plan.md  in-flight-queue.md  open-questions.md  program-execution-relationship.md  state-machine.md  types.md
examples/fanuc_rmi_replica_plugins/server/: Cargo.toml
examples/fanuc_rmi_replica_plugins/server/src/: main.rs
examples/shared/basic_types/: Cargo.toml
examples/shared/basic_types/src/: lib.rs
examples/shared/fanuc_replica_types/: Cargo.toml
examples/shared/fanuc_replica_types/src/: lib.rs
(+308 files in other folders)
