[package]
name = "pl3xus"
version = "1.1.3"
authors = [
    "Arturo Pino <apino@vertec.io>",
]
edition.workspace = true
rust-version.workspace = true
description = "Event based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/jamescarterbell/pl3xus"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["tcp", "cache_messages"]
tcp = ["async-net"]
cache_messages = []
dynamic_linking = ["bevy/dynamic_linking"]
debug_messages = []

[[example]]
name = "client"

[[example]]
name = "server"

[[example]]
name = "automatic_messages"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a bevy plugin
bevy.workspace = true
# Used for on wire serialization
bincode.workspace = true
serde = { version = "1.0.190", features = ["derive"] }
# Used for thread safe book keeping
dashmap = "5.5.3"
# Used for non-tokio dependent threaded message passing
async-channel = "2.0.0"
# Used for providers, which are async in nature
async-trait = "0.1.74"

# Used for TCP provider
async-net = { version = "2.0.0", optional = true }

# Used for Stream type and other ext
futures-lite = "2.0.0"

# Used for logging
tracing = "0.1"

pl3xus_common = { path = "../pl3xus_common", version = "1.1.3" }

[dev-dependencies]
# Examples need UI features, but these don't affect library users
# We can't use workspace = true here because we need to override default-features
bevy = { version = "0.17", default-features = true }
async-net = "2.0.0"
examples_common = { path = "examples_common" }