[package]
name = "pl3xus_common"
version = "1.1.3"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable Bevy ECS integration (Component derive, etc.)
ecs = ["dep:bevy"]

[dependencies]
codee = "0.3.3"  # Latest version with bug fixes and improvements
pl3xus_macros = { path = "../pl3xus_macros" }
serde = { version = "1.0.190", features = ["derive"] }
bincode.workspace = true
bevy = { version = "0.17", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
