[package]
name = "pl3xus_memory"
version = "1.1.2"
edition.workspace = true
rust-version.workspace = true
description = "Memory leak detection and prevention tools for pl3xus"
license = "MIT OR Apache-2.0"

[[bin]]
name = "outbound_test"
path = "src/bin/outbound_test.rs"
required-features = ["bin-deps"]

[[bin]]
name = "minimal_server"
path = "src/bin/minimal_server.rs"
required-features = ["bin-deps"]

[features]
default = ["websockets"]
detailed_diagnostics = []
websockets = []
tcp = []
bin-deps = ["dep:serde"]

[dependencies]
# Bevy dependencies
bevy = { workspace = true }

# Pl3xus dependencies
pl3xus = { path = "../pl3xus" }
pl3xus_common = { path = "../pl3xus_common" }
pl3xus_websockets = { path = "../pl3xus_websockets" }

# Other dependencies
dashmap = "5.5.3"
async-channel = "2.0.0"
futures-lite = "2.0.0"

# Optional dependencies for binaries
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1"

[dev-dependencies]
sysinfo = "0.29.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }
