[package]
name = "pl3xus_websockets"
version = "1.1.3"
edition.workspace = true
rust-version.workspace = true
resolver = "2"
description = "A Websocket NetworkProvider for Bevy_pl3xus"
readme = "README.md"
repository = "https://github.com/NoahShomette/pl3xus_mod_websockets"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false

[badges]
maintenance = { status = "actively-developed" }

[features]
# Feature flags for hybrid_server example to demonstrate different architectural patterns
immediate = []  # Immediate message pattern - direct Network resource usage
# Default is scheduled pattern - OutboundMessage relay system

[[example]]
name = "client"

[[example]]
name = "server"

[[example]]
name = "hybrid_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pl3xus = { version = "0.8", default-features = false }
pl3xus_common = { path = "../pl3xus_common"}
pl3xus = { path = "../pl3xus", default-features = false}

# This is a bevy plugin
bevy.workspace = true
# Used for on wire serialization
bincode.workspace = true
# Used for non-tokio dependent threaded message passing
async-channel = "2.1.0"
# Used for providers, which are async in nature
async-trait = "0.1.74"
# Websocket
url = { version = "2.0.0" }
futures = { version = "0.3.29" }

# Used 1.33.0or Stream type and other ext
futures-lite = "2.0.0"

# Used for logging
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.29.1", features = ["async-std-runtime"] }
ws_stream_tungstenite = { version = "0.15.0" }
async-std = { version = "1.12.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7.4" }
async_io_stream = { version = "0.3.3" }

[dev-dependencies]
# Examples need UI features, but these don't affect library users
bevy = { workspace = true, features = ["bevy_ui", "bevy_text", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_winit", "bevy_color", "x11"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108" }
async-net = "2.0.0"
# For hybrid_server example - enable TCP support
pl3xus = { path = "../pl3xus", features = ["tcp"], default-features = false }