[package]
name = "leptos_client_example"
version = "0.1.0"
edition = "2021"
description = "Leptos WebSocket Client Example for pl3xus"
license = "MIT"

[workspace]
# This is a standalone package, not part of the parent workspace

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16"  # Updated for codee 0.3.3 support, supports Leptos 0.8
reactive_graph = "0.2"  # Required for reactive traits (Get, With, Update)
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
pl3xus_common = { path = "../../pl3xus_common" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

