[package]
name = "wasm_client_example"
version = "0.8.0"
authors = ["James <jamescarterbell@gmail.com>", "Neikos <neikos@neikos.email>"]
edition = "2021"
description = "Wasm Client Example project"
readme = "README.md"
repository = "https://github.com/jamescarterbell/pl3xus"
license = "MIT"
categories = ["game-development", "network-programming"]
resolver = "2"


[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a bevy plugin
bevy = "0.12.0"
# Used for TCP provider
async-std = { version = "1.12.0" }
pl3xus = { git = "https://github.com/NoahShomette/pl3xus.git", branch = "wasm_core_features", default-features = false }
pl3xus_mod_websockets = {path = "../"}
serde = { version = "1.0.190", features = ["derive"] }
url = { version = "2.0.0" }
