[package]
name = "control_demo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
pl3xus = { path = "../../../crates/pl3xus" }
pl3xus_sync = { path = "../../../crates/pl3xus_sync", features = ["runtime"] }
pl3xus_websockets = { path = "../../../crates/pl3xus_websockets" }
control_demo_types = { path = "../../shared/control_demo_types", features = ["server"] }
tokio = { version = "1.48", features = ["full"] }

[[bin]]
name = "control_demo_server"
path = "src/main.rs"

