[package]
name = "devtools_demo_server"
version = "0.1.0"
edition = "2021"
description = "DevTools demonstration server for pl3xus_sync"
license = "MIT"

[dependencies]
bevy = { workspace = true }
pl3xus = { workspace = true }
pl3xus_sync = { workspace = true, features = ["runtime"] }
pl3xus_websockets = { workspace = true }
demo_types = { workspace = true, features = ["server"] }

