[package]
name = "fanuc_client"
version = "0.1.0"
edition = "2021"
description = "Leptos FANUC robot control client using real FANUC_RMI_API types"
license = "MIT"

[dependencies]
leptos = { workspace = true }
leptos-use = { workspace = true }
reactive_graph = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
pl3xus_client = { workspace = true, features = ["devtools"] }
pl3xus_sync = { workspace = true, default-features = false }
fanuc_real_types = { workspace = true }
bincode = { workspace = true }
