[package]
name = "fanuc_replica_plugins_app"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
devtools = ["pl3xus_client/devtools"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde.workspace = true
wasm-bindgen = "0.2"

# Pl3xus client crate
pl3xus_client = { workspace = true, features = ["stores"] }
pl3xus_common.workspace = true
bincode = "1.3"

# Plugins with stores feature only (no ecs/server features)
fanuc_replica_plugins = { path = "../plugins", default-features = false, features = ["stores"] }
fanuc_replica_core = { path = "../plugins/core", default-features = false }

# Fanuc RMI types (DTO only, no driver) - uses same workspace dep as plugins
fanuc_rmi = { workspace = true, default-features = false, features = ["DTO"] }

# Reactive stores for fine-grained field access
reactive_stores.workspace = true
js-sys = "0.3.83"
leptos-use = "0.16"
serde_json = "1.0.147"

