[package]
name = "duet_simulator"
version = "0.1.0"
edition = "2021"
publish = false
description = "Simulator for Duet RepRapFirmware HTTP API - for testing extruder integration"

[[bin]]
name = "duet_simulator"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
regex = "1"

