[package]
name = "fanuc_replica_plugins"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["ecs", "server"]

# ECS feature - enables Bevy Component derives and ECS systems
ecs = [
    "dep:bevy",
    "dep:pl3xus_sync",
    "dep:pl3xus_macros",
    "dep:pl3xus",
    "dep:pl3xus_common",
]

# Server feature - enables server-only functionality (driver, database, tokio)
server = [
    "ecs",
    "fanuc_rmi/driver",
    "fanuc_rmi/logging",
    "dep:tokio",
    "dep:rusqlite",
    "dep:anyhow",
    "dep:pl3xus_websockets",
    "dep:bevy-tokio-tasks",
]

# Stores feature - enables reactive stores for client-side fine-grained reactivity
stores = [
    "dep:reactive_stores",
    "dep:pl3xus_common",
]

[dependencies]
# Always available
serde.workspace = true

# Fanuc RMI types - always available with DTO feature
# Server feature enables driver/logging features
fanuc_rmi = { workspace = true, features = ["DTO"], default-features = false }

# ECS feature dependencies
bevy = { workspace = true, features = ["multi_threaded", "bevy_log"], optional = true }
pl3xus = { workspace = true, optional = true }
pl3xus_common = { workspace = true, optional = true }
pl3xus_sync = { workspace = true, features = ["runtime"], optional = true }
pl3xus_macros = { workspace = true, optional = true }

# Server feature dependencies
tokio = { workspace = true, optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
anyhow = { version = "1.0", optional = true }
pl3xus_websockets = { workspace = true, optional = true }
bevy-tokio-tasks = { workspace = true, optional = true }

# Stores feature dependencies (client-side)
reactive_stores = { workspace = true, optional = true }

