[package]
name = "fanuc_replica_plugins_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Import plugins with full server features
fanuc_replica_plugins = { path = "../plugins", features = ["ecs", "server"] }

# Re-export fanuc_rmi with full features for the server binary
fanuc_rmi = { workspace = true, features = ["driver", "logging", "DTO"] }

