[package]
name = "fanuc_replica_types"
version = "0.1.0"
edition = "2021"

[features]
server = ["dep:bevy"]
stores = ["dep:reactive_stores"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fanuc_rmi = { git = "https://github.com/vertec-io/Fanuc_RMI_API.git", features = ["DTO"], default-features = false }
bevy = { version = "0.17", default-features = false, features = ["multi_threaded", "bevy_log"], optional = true }
pl3xus_common = { path = "../../../crates/pl3xus_common" }
reactive_stores = { version = "0.2", optional = true }
