[package]
name = "fanuc_replica_execution"
version = "0.1.0"
edition = "2021"
publish = false
description = "Execution plugin for coordinated multi-device toolpath execution"

[features]
default = ["ecs", "server"]

# ECS feature - enables Bevy Component derives and ECS systems
ecs = [
    "dep:bevy",
]

# Server feature - enables server-only functionality
server = [
    "ecs",
    "dep:tokio",
]

[dependencies]
# Always available
serde.workspace = true
thiserror = "2"

# Robot-agnostic coordinate types
fanuc_replica_robotics.workspace = true

# ECS feature dependencies
bevy = { workspace = true, features = ["multi_threaded", "bevy_log"], optional = true }

# Server feature dependencies
tokio = { workspace = true, optional = true }

